added dark mode toggle button in navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Food Distribution And Supply Management</title>
 </head>
 
-<body>
+<body class="bg-white dark:bg-gray-800">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
